test/scc_test/exp/semantic-errors/025.t
void test()
{
    double a;
    ~a;
}